[build-system]
requires = ["hatchling == 1.28.0"]
build-backend = "hatchling.build"

[project]
name = "tracecat"
description = "Open source Tines / Splunk SOAR alternative for security and IT engineers."
readme = "README.md"
requires-python = ">=3.12"
license = "AGPL-3.0"
authors = [{ name = "Tracecat", email = "founders@tracecat.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "alembic_utils==0.8.8",
    "alembic-postgresql-enum==1.8.0",
    "alembic==1.17.2",
    "async-lru==2.0.5",
    "asyncpg==0.31.0",
    "authlib==1.6.6",
    "cloudpickle==3.1.2",
    "cramjam==2.11.0",
    "croniter==6.0.0",
    "cryptography==43.0.3",
    "dateparser==1.2.2",
    "defusedxml==0.7.1",
    "email-validator==2.3.0",
    "fastapi-users[sqlalchemy,oauth]==15.0.3",
    "fastapi[standard]==0.127.0",
    "fickling==0.1.6",
    "filelock==3.20.1",
    "google-auth==2.45.0",
    "greenlet==3.3.0",
    "hatchling==1.28.0",
    "httpx==0.28.1",
    "jsonpath_ng==1.7.0",
    "lark==1.3.1",
    "loguru==0.7.3",
    "minio==7.2.20",
    "orjson==3.11.5",
    "paramiko==3.5.1",
    "phonenumbers==8.13.55",
    "pip==25.3",
    "polyfile==0.5.5",
    "psycopg[binary]==3.3.2",
    "pyarrow==16.1.0",
    "pydantic-ai-slim[anthropic,bedrock,google,mcp,openai]==1.29.0",
    "pydantic-extra-types==2.10.6",
    "pydantic==2.12.5",
    "pygithub==2.8.1",
    "pysaml2==7.5.4",
    "python-slugify==8.0.4",
    "ray[default]==2.52.0",
    "redis[hiredis]==7.1.0",
    "sentry-sdk==2.48.0",
    "sqlalchemy==2.0.45",
    "starlette==0.50.0",
    "temporalio==1.21.1",
    "tenacity==8.5.0",
    "tomli==2.3.0",
    "tracecat-ee",
    "tracecat-registry",
    "urllib3==2.6.2",
    "uv==0.9.18",
    "uvicorn==0.40.0",
    "virtualenv==20.35.4",
    "pyopenssl==24.2.1",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://tracecat.com"
Documentation = "https://docs.tracecat.com/"
Repository = "https://github.com/TracecatHQ/tracecat"


[tool.uv.sources]
tracecat-registry = { workspace = true }
tracecat-ee = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[dependency-groups]
dev = [
    "mypy==1.19.1",
    "pre-commit==4.5.1",
    "psycopg==3.3.2",
    "pytest-mock==3.15.1",
    "pytest-repeat==0.9.4",
    "pytest-xdist==3.8.0",
    "pytest==8.4.2",
    "python-dotenv==1.2.1",
    "respx==0.22.0",
    "ruff==0.14.10",
]

[tool.hatch.version]
path = "tracecat/__init__.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 88
fix = true

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by ruff
    "B008", # do not perform function calls in argument defaults
    "W191", # indentation contains tabs
]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true

[tool.pytest.ini_options]
addopts = ["--strict-config", "--strict-markers", "-vvrP"]
xfail_strict = true
log_level = "ERROR"
log_cli = true
log_cli_level = "ERROR"
filterwarnings = [
    "ignore:Pydantic serializer warnings:UserWarning",
]
markers = [
    "anyio: marks tests as requiring the anyio pytest plugin",
    "webtest: marks tests that require the web",
    "slow: marks tests as slow",
    "dbtest: marks tests that make database calls",
    "disable_fixture: marks tests that disable fixtures",
    "integration: marks tests that perform live network calls and container operations",
    "llm: marks tests that perform LLM calls",
    "ollama: mark tests that require Ollama",
]
