[build-system]
requires = ["hatchling >= 1.27.0"]
build-backend = "hatchling.build"

[project]
name = "tracecat_registry"
description = "Tracecat actions and integrations registry."
readme = "README.md"
requires-python = ">=3.12"
license = "AGPL-3.0"
authors = [{ name = "Tracecat", email = "founders@tracecat.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "aioboto3==13.0.1",
    "ansible-runner==2.4.0",
    "ansible==11.1.0",
    "boto3==1.34.70",
    "crowdstrike-falconpy==1.4.4",
    "dnspython==2.6.1",
    "docker==7.1.0",
    "fpdf2==2.8.2",
    "grpcio==1.68.0",
    "hatchling==1.27.0",
    "ldap3==2.9.1",
    "marshmallow==3.26.1",
    "nh3==0.2.18",
    "pydantic-ai-slim[openai,anthropic,vertexai]==0.2.3",
    "pymongo==4.8.0",
    "slack-sdk==3.28.0",
    "tenacity==8.3.0",
    "types-aioboto3[guardduty,s3]==13.0.1",
]
dynamic = ["version"]

[project.optional-dependencies]
cli = ["typer>=0.15.1", "rich>=13.7.0"]

[project.urls]
Homepage = "https://tracecat.com"
Documentation = "https://docs.tracecat.com"
Repository = "https://github.com/TracecatHQ/tracecat"

[project.scripts]
tc = "tracecat_registry.__main__:main"

[tool.hatch.version]
path = "tracecat_registry/__init__.py"

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true
