[build-system]
requires = ["hatchling >= 1.27.0"]
build-backend = "hatchling.build"

[project]
name = "tracecat_mcp"
description = "Tracecat MCP server"
readme = "README.md"
version = "0.0.1"
requires-python = ">=3.12"
license = "AGPL-3.0"
authors = [{ name = "Tracecat", email = "founders@tracecat.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "httpx>=0.27.2",
    "mcp[cli]>=1.8.1",
    "pydantic>=2.10.6",
    "pyyaml>=6.0.2",
    "tracecat",
    "tracecat_mcp",
]

[tool.hatch.version]
path = "tracecat_mcp/__init__.py"

[tool.uv.sources]
tracecat_mcp = { path = "." }
tracecat = { path = ".." }
